Exercise_2/createNamespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fruits
---
apiVersion: v1
kind: Namespace
metadata:
  name: food
