Exercise_2/deploy-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: apple
  name: apple
  namespace: fruits
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apple
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: apple
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "30m"
            memory: "50Mi"
          limits:
            cpu: "100m"
            memory: "150Mi"
status: {}
