Exercise_2/exposePod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cherry
  name: cherry
  namespace: fruits
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cherry
