Exercise_2/service-1.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: tree
  name: tree
  namespace: fruits
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: apple
  type: ClusterIP
status:
  loadBalancer: {}
