Exercise_2/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: weather
  name: weather
  namespace: liquid
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: water
  type: ClusterIP
status:
  loadBalancer: {}
