Exercise_2/serviceManifest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    department: farmers
  name: tree
  namespace: fruits
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    department: farmers
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    department: butcher
  name: chicken
  namespace: food
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    department: butcher
  type: ClusterIP
