Exercise_2/netPolicy-allow-fruits.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fruits-to-food
  namespace: food
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: fruits
      - podSelector:
          matchLabels:
            app: cherry
      - podSelector:
          matchLabels:
            app: apple
  policyTypes:
    - Ingress
