Exercise_2/netPolicy-deny-pods.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-cherry-deny-all
  namespace: fruits
spec:
  podSelector:
    matchLabels:
      app: cherry
  policyTypes:
    - Ingress
