Exercise_2/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fruits-deny-all
  namespace: fruits
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  # ingress:
  #   - from:
  #       - ipBlock:
  #           cidr: 172.17.0.0/16
  #       - namespaceSelector:
  #           matchLabels:
  #             name: liquid
  #     ports:
  #       - protocol: TCP
  #         port: 8080
  # egress:
  #   - to:
  #       - ipBlock:
  #           cidr: 172.17.0.0/16
  #     ports:
  #       - protocol: TCP
  #         port: 8080
